--- a/experience.html
+++ b/experience.html
@@ -40,20 +40,22 @@
       </div>
       <div class="d-none d-sm-block">
         <div class="display-5 mb-3">Krittaphat Suphannakul</div>
-        <div class="text-muted body">
+        <div class="text-muted">
           Hello, My name is Pipe. I study in Computer Engineering, Chiang Mai
           University.&#128512;
         </div>
       </div>
     </div>
-    <h3 class="head">Skill</h3>
+    <h3 class="head">Experience</h3>
     <div class="block">
-      <h4 class="head">Programming&#128187;</h4>
-      <p class="body">I have experience coding C++.</p>
+      <h4 class="head">Driving&#128663;</h4>
+      <p class="body">I like to drive after school or at night.</p>
     </div>
     <div class="block">
-      <h4 class="head">Cooking&#127859;</h4>
-      <p class="body">I mostly like to cook Thai food.</p>
+      <h4 class="head">Playing games&#127918;</h4>
+      <p class="body">
+        Mostly I like to play shooting games and farming games.
+      </p>
     </div>
     <h5>
       --------------------------------------------------------------------------------
